styles/style.css
.page {
  font-family: var(--main-font-family), monospace;
  background-color: var(--background-color);
  font-size: var(--main-font-size);
  font-weight: var(--bold-font-weight);
  background-image: var(--background-image);
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
  background-position: center;
}

.decorated-zone {
  position: relative;
}

.decorated-zone::before,
.decorated-zone::after {
  content: "";
  position: absolute;
  width: 25px;
  height: 25px;
  border: 1px solid var(--decoration-color);
  z-index: 2;
}

.decorated-zone::before {
  top: 10px;
  right: 10px;
  border-bottom: none;
  border-left: none;
}

.decorated-zone::after {
  bottom: 10px;
  left: 10px;
  border-top: none;
  border-right: none;
}

.accent-block {
  background-color: var(--accent-color);
  color: var(--description-header-color);
  line-height: 23.4px;
}

.font-weight-regular {
  font-weight: var(--regular-font-weight);
}

.header {
  block-size: 100vh;
  min-block-size: 668px;
  padding-inline: clamp(10px, 2.5vw, 20px);
  display: flex;
  justify-content: flex-end;
  flex-direction: column;
  padding-block-end: 66px;
  gap: 53px;
}

.rec-label {
  color: var(--accent-color);
  font-weight: var(--regular-font-weight);
  text-transform: uppercase;
  position: absolute;
  top: 10px;
  right: 20px;
  z-index: 2;
  display: flex;
  align-items: center;
  gap: 8px;
}

.rec-label::after {
  content: "";
  width: 10px;
  height: 10px;
  background-color: var(--accent-color);
  border-radius: 50%;
  box-shadow: 0 0 3px 3px rgba(255, 0, 112, 0.65);
}

.header__theme-menu {
  position: absolute;
  top: 72px;
  right: 10px;
}

.header__theme-menu-list {
  display: flex;
  flex-direction: column;
  gap: 11.5px;
}

.header__theme-menu-button {
  color: var(--button-color);
  background-color: transparent;
  border: none;
  line-height: 18px;
  padding: 3.75px 13px;
  text-transform: lowercase;
}

.header__theme-menu-button_active {
  outline: solid 1px var(--button-color);
}

.header__theme-menu-button:hover {
  outline: solid 1px var(--decoration-shadow-color);
}

.header__theme-menu-button:focus {
  outline: none;
}

.header__theme-menu-button:focus-visible {
  border-bottom: solid 1px;
  text-underline-offset: 2px;
}

.header__title {
  font-size: var(--focus-font-size);
  color: var(--focus-text-color);
  text-shadow: 3px 3px var(--accent-color);
  line-height: 82.5%;
  text-transform: lowercase;
}

.content {
  margin-block-start: 30px;
  padding: clamp(10px, 2.5vw, 20px);
  display: grid;
  gap: 50px;
}

.content-section {
  line-height: 24.3px;
}

.content-section__title {
  color: var(--content-section-header-color);
  margin-block-end: 18px;
}

.text-block {
  margin-block-end: 20px;
}

.text-block:last-child {
  margin-block-end: 0;
}

.text-block__title {
  margin-block-end: 10px;
}

.text-block__description {
  color: var(--main-color);
  font-weight: var(--regular-font-weight);
  line-height: 23.3px;
}

.text-block__subtitle {
  margin-block-start: 20px;
  margin-block-end: 10px;
}

.gallery__title {
  margin-block-end: 10px;
}

.gallery-section {
  margin-block-end: 30px;
}

.gallery {
  display: grid;
  gap: 10px;
}

.gallery-item {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.footer {
  display: flex;
  align-items: center;
  justify-content: center;
  block-size: 100vh;
  min-block-size: 668px;
}

.footer__text {
  font-size: var(--focus-font-size);
  font-weight: var(--bold-font-weight);
  color: var(--focus-text-color);
  text-shadow: calc(0.01em * 2.5) calc(0.01em * 2.5) var(--accent-color);
  line-height: 82.5%;
  text-transform: lowercase;
}

.text-link {
  text-decoration: none;
  text-shadow: 2px 2px var(--accent-color);
}

.text-link:hover {
  text-decoration: none;
  border-bottom: 1px solid currentColor;
}

.text-link:focus {
  outline: none;
}

.text-link:focus-visible {
  outline: solid 1px var(--main-color);
  text-underline-offset: 2px;
}

@media (width >= 768px) {
  :root {
    --focus-font-size: var(--focus-font-size-large);
  }

  .header__theme-menu {
    top: 192px;
    right: 20px;
  }

  .header__title {
    margin-inline-start: -3%;
  }

  .header {
    gap: 162px;
    padding-block-end: 182px;
  }

  .decorated-zone::before {
    right: 20px;
    top: 20px;
  }

  .decorated-zone::after {
    bottom: 20px;
    left: 20px;
  }

  .rec-label {
    top: 20px;
    right: 30px;
  }

  .header__description {
    max-width: 364px;
    align-self: flex-end;
  }

  .header__theme-menu-list {
    top: 192px;
    right: 20px;
  }

  .content {
    gap: 80px;
    margin-block: 41px;
  }

  .content-section {
    display: grid;
    grid-template-columns: 1fr 2fr;
    gap: 18px;
  }

  .content-section__title {
    margin-block-end: 0;
  }

  .section-wide {
    .content-section__title {
      grid-column: 1 / -1;
      max-width: 236px;
    }
    .text-blocks {
      grid-column: 1 / -1;
    }
  }

  .gallery-section {
    margin-block-end: 0;
  }

  .gallery {
    grid-template-columns: 1fr 1fr 1fr;
    gap: 20px;
  }

  .gallery__title {
    margin-block-end: 18px;
  }

  .gallery-item {
    box-sizing: border-box;
  }

  .gallery-item:nth-child(1) {
    grid-column: span 2;
    grid-row: 1;
  }

  .gallery-item:nth-child(2) {
    grid-column: 3;
    grid-row: span 2;
  }

  .gallery-item:nth-child(3) {
    grid-column: 1;
    grid-row: 2 / 4;
  }

  .gallery-item:nth-child(4) {
    grid-column: 2;
    grid-row: 2;
  }

  .gallery-item:nth-child(5) {
    grid-column: 2 / 4;
    grid-row: 3;
  }
}

@media (width >= 1024px) {
  .header {
    padding-block-end: 134px;
    gap: 114px;
  }

  .header__theme-menu {
    top: 20px;
    right: calc(50% - 115px);
  }

  .header__theme-menu-list {
    flex-direction: row;
    justify-self: center;
  }

  .header__title {
    margin-inline-start: -2%;
    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
  }

  .header__description {
    max-width: 491px;
  }

  .decorated-zone::before {
    right: 20px;
    top: 17px;
  }

  .decorated-zone::after {
    bottom: 20px;
    left: 20px;
  }

  .content {
    margin-top: 38px;
  }

  .content-section {
    gap: 14px;
    grid-template-columns: repeat(3, 1fr);
  }

  .section-wide {
    gap: 19px;
    .content-section__title {
      max-width: 350px;
      margin-block-end: 0;
    }
    .text-blocks {
      display: grid;
      grid-template-columns: repeat(3, 1fr);
      column-gap: 20px;
    }
  }

  .text-blocks {
    grid-column: span 2;
  }

  .footer {
    margin-block-start: 40px;
  }
}

